# lega-ner

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
experiments/: leganer_fine_tuning.ipynb  leganer_fine_tuning_improved.ipynb
outputs/results/: README.md  ner_results_cv_20260115_133504.json  ner_results_cv_20260116_135129.json  ner_results_cv_20260117_213012.csv  ner_results_cv_20260118_014424.json
reference/: README.md  bertic_comtext_pretokenized.py  load_data.py
src/: inference.py  leganer_fine_tuning.py  run_test_cases.py
tests/: ner_test_cases.json
