[project]
name = "lega-ner"
version = "0.1.0"
description = "Benchmarking Legal Named Entity Recognition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "classla>=1.1.0",
    "cyrtranslit>=1.2.0",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "notebook>=7.5.0",
    "polars>=1.36.1",
    "seqeval>=1.2.2",
    "simpletransformers>=0.70.5",
    "spacy[cuda12x]>=3.8.11",
    "torch>=2.9.1",
    "transformers[torch]>=4.57.3",
]
